--- a/Views/Modules/FieldInfo.cshtml
+++ b/Views/Modules/FieldInfo.cshtml
@@ -4,19 +4,30 @@
 
 @section Links {
     <link rel="stylesheet" href="~/css/fieldInfo.css" asp-append-version="true" />
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="/js/openWeatherMapRequester.js"></script>
 }
 
 @section Navigation {
-    <div class="NavigationContainer">
-        <a class="NavigationButton" asp-controller="Home" asp-action="Index">Выйти</a>
-        <a class="NavigationButton" asp-controller="Modules" asp-action="FieldList">Отчёты</a>
-        <a class="NavigationButton" asp-controller="Modules" asp-action="FieldList">Анализ</a>
-        <a class="NavigationButton" asp-controller="Modules" asp-action="FieldList">Поля</a>
-        <a class="NavigationButton" asp-controller="Modules" asp-action="FieldList">Доступ</a>
-        <a class="NavigationButton" asp-controller="Images" asp-action="ImageAction">
-            <img src="/icons/moon.png" alt="Картинка" class="button-image">
+    <a class="header-logo" asp-controller="Home" asp-action="Index">WeatherSea</a>
+    <div class="header-buttons">
+        <a class="header-button" asp-controller="Modules" asp-action="FieldList">
+            Отчёты
+        </a>
+        <a class="header-button" asp-controller="Modules" asp-action="FieldList">
+            Анализ
+        </a>
+        <a class="header-button" asp-controller="Modules" asp-action="FieldList">
+            Поля
+        </a>
+        <a class="header-button" asp-controller="Modules" asp-action="ShareList">
+            Доступ
         </a>
     </div>
+    <a class="header-button-image" asp-controller="Modules" asp-action="Profile">
+        <img src="/icons/moon.png" alt="Картинка" class="button-image">
+    </a>
 }
 
 @section Body {
@@ -26,87 +37,75 @@
             <tr>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/moon.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">14 °С</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
                     <div class="bottom-text">0:00</div>
                 </td>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/moon.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">17 °С</div>
-                    <div class="bottom-text">2:00</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
+                    <div class="bottom-text">3:00</div>
                 </td>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">21 °С</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
                     <div class="bottom-text">6:00</div>
                 </td>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">23 °С</div>
-                    <div class="bottom-text">8:00</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
+                    <div class="bottom-text">9:00</div>
                 </td>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">25 °С</div>
-                    <div class="bottom-text">10:00</div>
-                </td>
-                <td class="field">
-                    <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
-                    <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">27 °С</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
                     <div class="bottom-text">12:00</div>
                 </td>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">26 °С</div>
-                    <div class="bottom-text">14:00</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
+                    <div class="bottom-text">15:00</div>
                 </td>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">28 °С</div>
-                    <div class="bottom-text">16:00</div>
-                </td>
-                <td class="field">
-                    <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
-                    <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">24 °С</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
                     <div class="bottom-text">18:00</div>
                 </td>
                 <td class="field">
                     <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
+                    <div class="top-text-number">-</div>
+                    <div class="top-text">м/с</div>
                     <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">21 °С</div>
-                    <div class="bottom-text">20:00</div>
-                </td>
-                <td class="field">
-                    <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
-                    <img src="/icons/sun.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">17 °С</div>
-                    <div class="bottom-text">22:00</div>
-                </td>
-                <td class="field">
-                    <img src="/icons/arrow-right.png" class="top-image" alt="Верхняя картинка">
-                    <div class="top-text">2.4 м/с</div>
-                    <img src="/icons/moon.png" class="center-image" alt="Центральная картинка">
-                    <div class="center-text">15 °С</div>
-                    <div class="bottom-text">24:00</div>
+                    <div class="center-text-number">-</div>
+                    <div class="center-text">°С</div>
+                    <div class="bottom-text">21:00</div>
                 </td>
             </tr>
         </table>
