--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeatherSea</title>
     <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/header.css" asp-append-version="true" />
     @RenderSection("Links", required: false)
 </head>
 <body>
-    <div class="MainNavigation">
+    <header>
         @RenderSection("Navigation")
-    </div>
+    </header>
+
     <div class="MainPage">
         @RenderSection("Body")
     </div>
