--- a/wwwroot/css/fieldInfo.css
+++ b/wwwroot/css/fieldInfo.css
@@ -23,24 +23,33 @@ table {
     border: 4px solid #0085FF;
     padding: 0.5rem;
     text-align: center;
-    width: calc(80vw / 13);
-    height: calc((80vw / 13) * 5);
+    width: calc(60vw / 8);
+    height: calc((60vw / 8) * 5);
     border-radius: 35px;
     position: relative;
 }
 
     .field img.top-image {
-        width: calc(80vw / 13 / 3);
-        height: calc(80vw / 13 / 3);
+        width: calc(60vw / 8 / 3);
+        height: calc(60vw / 8 / 3);
         position: absolute;
         top: 5%;
         left: 50%;
         transform: translateX(-50%);
     }
 
+    .field .top-text-number {
+        position: absolute;
+        top: calc(5% + 60vw / 8 / 3);
+        left: 50%;
+        font-size: 1.5vw;
+        transform: translateX(-50%);
+        color: white;
+    }
+
     .field .top-text {
         position: absolute;
-        top: calc(5% + 80vw / 13 / 3);
+        top: calc(5% + 60vw / 8 / 3 + 1.8vw);
         left: 50%;
         font-size: 1.5vw;
         transform: translateX(-50%);
@@ -48,12 +57,21 @@ table {
     }
 
     .field img.center-image {
-        width: calc(80vw / 13 * 5 / 6);
-        height: calc(80vw / 13 * 5 / 6);
+        width: calc(60vw / 8 * 5 / 6);
+        height: calc(60vw / 8 * 5 / 6);
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+
+    .field .center-text-number {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size: 2.5vw;
+        transform: translate(-50%, calc(80vw / 13 * 2 / 3 / 2 + 10px));
+        color: white;
     }
 
     .field .center-text {
@@ -61,9 +79,8 @@ table {
         top: 50%;
         left: 50%;
         font-size: 2.5vw;
-        transform: translate(-50%, calc(80vw / 13 * 2 / 3 / 2 + 10px));
+        transform: translate(-50%, calc(80vw / 13 * 2 / 3 / 2 + 10px + 3vw));
         color: white;
-        white-space: nowrap;
     }
 
     .field .bottom-text {
