--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -1,3 +1,10 @@
+* {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 @font-face {
     font-family: 'Exo2';
     src: url('/fonts/Exo2-SemiBold.woff2');
@@ -17,7 +24,6 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    user-select: none;
     font-family: 'Exo2', sans-serif;
 }
 
