--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,13 +9,13 @@
 @section Navigation {
     <a class="header-logo">WeatherSea</a>
     <div class="header-buttons">
-        <a class="header-button" asp-controller="Home" asp-action="PricesInfo">
+        <a class="header-button" asp-controller="Home" asp-action="PriceInfo">
             Цены
         </a>
-        <a class="header-button" asp-controller="Account" asp-action="Register">
+        <a class="header-button" asp-controller="Identification" asp-action="Registration">
             Регистрация
         </a>
-        <a class="header-button" asp-controller="Account" asp-action="Login">
+        <a class="header-button" asp-controller="Identification" asp-action="Authorization">
             Авторизация
         </a>
     </div>
@@ -25,11 +25,11 @@
     <div class="WeatherSeaContainer">
         <div class="WeatherSeaContent">
             <h1 class="WeatherSeaTitle">WeatherSea</h1>
-            <p class="WeatherSeaDescription">Точный прогноз погоды для моряков и любителей морских путешествий.</p>
-            <p class="WeatherSeaDescription">Узнайте погоду в открытом море и будьте готовы к новым приключениям.</p>
+            <p class="WeatherSeaDescription">Точный прогноз погоды для профессиональных агрономов и любителей.</p>
+            <p class="WeatherSeaDescription">Узнайте погоду на своих полях из будущего.</p>
             <div class="WeatherSeaSlogan">Ваш надежный компас в мире погоды!</div>
         </div>
-        <img class="WeatherSeaImage" src="/icons/happyCloud.png" alt="WeatherSea Icon" />
+        <img class="WeatherSeaImage" src="/icons/sun.png" alt="WeatherSea Icon" />
     </div>
 }
 
