--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,5 +16,8 @@
     <div class="MainPage">
         @RenderSection("Body")
     </div>
+
+    @RenderSection("Modals", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
