--- a/wwwroot/css/header.css
+++ b/wwwroot/css/header.css
@@ -2,12 +2,14 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 3.5vw;
-    width: 100%;
-    background: rgba(0, 133, 255, 1);
+    height: calc(min(3.5vw, 5vh));
+    min-height: 60px;
+    width: calc(max(100vw, 1000px));
+    max-width: 100%;
+    background: #0085FF;
     border-bottom: 1px solid #F3F3F3;
     z-index: 1000;
-    padding: 1vw 2vw;
+    padding: calc(max(1vw, 10px)) calc(max(2vw, 20px));
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,9 +17,9 @@
 }
 
 .header-logo {
-    font-size: 2.5vw;
+    font-size: calc(max(min(2.5vw, 3vh), 20px));
     font-weight: bold;
-    margin: 0 0.5vw;
+    margin: 0 calc(max(0.5vw, 5px));
     color: #fff;
     text-decoration: none;
 }
@@ -25,11 +27,13 @@
 .header-search-container {
     background: #fff;
     width: calc(100% - 2vw);
-    padding: 0.5vw;
-    margin: 0vw 25vw 0vw 5vw;
+    min-width: 1160px;
+    padding: calc(max(0.5vw, 5px));
+    margin: 0 calc(max(25vw, 250px)) 0 calc(max(5vw, 50px));
     border: 1px solid #ccc;
-    border-radius: 1vw;
-    height: 1.5vw;
+    border-radius: calc(max(1vw, 10px));
+    height: calc(min(1.5vw, 2vh));
+    min-height: 20px;
     position: relative;
 }
 
@@ -37,9 +41,10 @@
     background: #fff;
     width: 60%;
     outline: none;
-    height: 2vw;
+    height: calc(min(2vw, 3vh));
+    min-height: 30px;
     text-overflow: ellipsis;
-    font-size: 1.2vw;
+    font-size: calc(max(min(1.2vw, 1.5vh), 16px));
     white-space: nowrap;
     overflow: hidden;
     border: 0;
@@ -49,14 +54,14 @@
 }
 
     .header-search-input::placeholder {
-        font-size: 1.2vw;
+        font-size: calc(max(min(1.2vw, 1.5vh), 16px));
         color: #ccc;
         vertical-align: middle;
     }
 
 .header-search-icon {
     position: absolute;
-    right: 1vw;
+    right: calc(max(1vw, 10px));
     top: 50%;
     transform: translateY(-50%);
     height: 80%;
@@ -64,51 +69,52 @@
 
 .header-buttons {
     display: flex;
-    gap: 1vw;
-    height: 2.5vw;
+    gap: calc(max(1vw, 10px));
+    height: calc(min(2.5vw, 3.5vh));
+    min-height: 40px;
 }
 
 .header-button {
     display: flex;
     align-items: center;
-    gap: 1vw;
+    gap: calc(max(1vw, 10px));
     color: #fff;
     text-decoration: none;
-    font-size: 1.5vw;
-    border: 0.2vw solid #fff;
-    border-radius: 1vw;
-    padding: 0.5vw;
+    font-size: calc(max(min(1.5vw, 2vh), 18px));
+    border: calc(max(0.2vw, 2px)) solid #fff;
+    border-radius: calc(max(1vw, 10px));
+    padding: calc(max(0.5vw, 5px));
 }
 
     .header-button:hover {
         background-color: #fff;
-        color: ##F3F3F3;
+        color: #0085FF;
         transition: background-color 0.3s, color 0.3s;
     }
 
 .header-button-image {
     display: flex;
     align-items: center;
-    gap: 1vw;
+    gap: calc(max(1vw, 10px));
     color: #fff;
     text-decoration: none;
-    font-size: 1.5vw;
-    border: 0.2vw solid #fff;
-    border-radius: 1vw;
-
-    width: 2.5vw;
+    font-size: calc(max(min(1.5vw, 2vh), 18px));
+    border: calc(max(0.2vw, 2px)) solid #fff;
+    border-radius: calc(max(1vw, 10px));
 }
 
     .header-button-image:hover {
         background-color: #fff;
-        color: ##F3F3F3;
+        color: #F3F3F3;
         transition: background-color 0.3s, color 0.3s;
     }
 
     .header-button-image img.button-image {
-        padding: 6px 6px;
-        width: 2vw;
-        height: 2vw;
+        padding: calc(max(6px, 0.5vw));
+        width: calc(min(2vw, 3vh));
+        min-width: 25px;
+        height: calc(min(2vw, 3vh));
+        min-height: 25px;
         object-fit: cover;
         top: 0;
         left: 0;
